# python-package-demo

./: pyproject.toml
.github/workflows/: python-app.yml
src/python_package_demo/: test_functions.py
