[project]
name = "python-package-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
